# markov-irc

./: Cargo.toml
src/: ircbot.rs  logparse.rs  main.rs  markov.rs  markovtrainer.rs  msgprocessor.rs
